1999-01-08  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/pop3.el (pop3-last): Use `split-string' instead of
	`pop3-string-to-list'.
	(pop3-stat): Ditto.
	(pop3-munge-message-separator): Ditto.
	(pop3-string-to-list): Abolished.

1999-01-06  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* lisp/gnus-offline.el (gnus-offline-setup): Don't call
	`gnus-offline-agent-expire' when 'gnus-agent-expire-all' is
	non-nil.
	(gnus-offline-define-menu-on-miee): Call `easy-menu-add' under
	XEmacs.
	(gnus-offline-popup-menu): New function.
	(gnus-offline-define-menu-and-key): Call it under Emacs to create
	a popup menu in the group buffer.

1999-01-04  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.052.

	* Sync up with Pterodactyl Gnus v0.69.

1998-12-28  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-summary-preview-mime-message): Always
	select the article before previewing. Abolish prefix arg.

	* lisp/gnus-art.el (gnus-mime-preview-quitting-method): re-select
	the article without reservation.
	(gnus-article-display-mime-message): Show all headers if
	`gnus-have-all-headers' the local var of summary buffer is non-nil.

1998-12-25  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-article-check-buffer): Rewrite (checking
	for buffer object).

1998-12-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-art.el (mime-preview-over-to-next-method-alist): Use
	`gnus-summary-next-article' in `gnus-original-article-mode'.
	(mime-preview-over-to-previous-method-alist): Use
	`gnus-summary-prev-article' in `gnus-original-article-mode'.

1998-12-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-bbdb.el (toplevel): Define `bbdb-pop-up-elided-display'
	for avoiding byte-compile warning.

	* lisp/gnus-art.el (gnus-article-mode-map): Define almost undefined
	keys to `gnus-article-read-summary-keys'.
	(gnus-article-check-buffer): Check for a major-mode in
	`gnus-original-article-buffer' as well.